--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
 	<div class="header">
   <a href="https://bit.ly/2ZY2NlQ" class="logo">CompanyLogo</a>
   <div class="header-right">
-    <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a class="active" href="index.html">Home</a>
+    <a href="contact.html">Contact</a>
+    <a href="about.html">About</a>
+    <a href="Registry.php">Register</a>
   </div>
 </div>
 <form action="/action_page.php">
